# process-improve

./: .coveragerc  .editorconfig  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGINEERING_AUDIT.md  GSK_INVENTORY.md  LICENSE  MANIFEST.in  Makefile  PR_DESCRIPTION.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SKLEARN_COMPATIBILITY.md  TODO.md  TODO.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  snippets.py  testing.py
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: codeql.yml  docs.yml  publish.yml  pythonpackage.yml  release.yml  run-tests.yml
docs/: Makefile  README.md  architecture.rst  conf.py  index.rst  multiblock_audit.md  multivariate.rst  quickstart.rst  requirements.txt  scaling.rst
docs/api/: batch.rst  bivariate.rst  experiments.rst  index.rst  monitoring.rst  multivariate.rst  regression.rst  sensory.rst  simulation.rst  tooling.rst  univariate.rst  visualization.rst
docs/applied_doe/: 00_plan_your_experiment.rst  01_two_factor_mindset.ipynb  02_coding_linear_model.ipynb  03_full_factorials.ipynb  04_residuals_blocking.ipynb  05_fractional_factorials.ipynb  06_power_and_evaluation.ipynb  07_response_surfaces.ipynb  08_multiresponse_confirmation.ipynb  index.rst
docs/development/: deprecation_policy.rst  error_handling.rst  index.rst  logging.rst  reproducibility.rst  tool_authoring.rst
docs/doe/: README.md  coverage.md  questions.md  tool-question-mapping.md  tools.md  workflows.md
docs/user_guide/: cross_validation.rst  design_evaluation.rst  doe_strategy.rst  index.rst  multiblock.rst  multivariate.rst  omars_designs.rst  pca.rst  pls.rst  sensory_panel.rst  showcase.rst  tpls.rst
examples/batch/: batch-optimization.ipynb  batch_llm_multivariate.py  demo-multiplots.ipynb
examples/multivariate/: pca_example.py
notebooks/least-squares-modelling/: Misguided-reliance-on-R2-alone.ipynb
notebooks_examples/: Example notebook.ipynb  Tablets.xlsx
notebooks_examples/batch/: alignment-and-pca-example.ipynb  alignment-example.ipynb  batch-music.py  batch-optimization.ipynb  batch_llm.py  demo-multiplots.ipynb
notebooks_examples/experiments/: case-studies.py
notebooks_examples/least-squares-modelling/: Misguided-reliance-on-R2-alone.ipynb
notebooks_examples/multivariate/: pca_example.py
process_improve/: __init__.py  _extras.py  _linalg.py  _random.py  case-studies.py  config.py  datasets.py  designs_factorial.py  mcp_server.py  models.py  multivariate.py  plotting.py  robust.py  simulations.py  structures.py  tests.py  tool_safety.py  tool_spec.py
process_improve/batch/: __init__.py  alignment_helpers.py  data_input.py  features.py  plotting.py  preprocessing.py  tools.py
process_improve/bivariate/: __init__.py  _elbow_peak.py  methods.py  metrics.py  tools.py
process_improve/docs/: outline.txt
process_improve/experiments/: __init__.py  _lm.py  analysis.py  augment.py  datasets.py  designs.py  designs_factorial.py  designs_mixture.py  designs_optimal.py  designs_response_surface.py  designs_screening.py  designs_utils.py  evaluate.py  factor.py  models.py  optimal.py  optimization.py  plotting.py  simulations.py  structures.py  tools.py
process_improve/media/: boilingpot.csv  distillate-flow.csv  oil-company-doe.csv  test_doe1.csv  trade-off-table.html
process_improve/monitoring/: control_charts.py  metrics.py  tools.py
process_improve/multivariate/: __init__.py  _base.py  _common.py  _diagnostics.py  _mbpca.py  _mbpls.py  _nipals.py  _pca.py  _pca_pls.py  _pls.py  _preprocessing.py  _tpls.py  calculations.py  methods.py  plots.py  tools.py  utils.py
process_improve/notebooks_examples/: Example notebook.ipynb
process_improve/regression/: _robust_regression.py  methods.py  tools.py
process_improve/simulation/: __init__.py  model.py  tools.py
process_improve/univariate/: __init__.py  metrics.py  tools.py
process_improve/visualization/: __init__.py  plots.py  raincloud.py  spec.py  themes.py  tools.py  types.py
scripts/: adaptive-softsensor-figures.py  adaptive-softsensor-sensitivity.py  characterize_4factor_omars.py  flotation_monitoring_case.py  kamyr_soft_sensor.py  monitoring_chapter_figures.py  theme_gallery.py
src/process_improve/: __init__.py  _extras.py  recipes.py  tool_safety.py  tool_spec.py
tests/: __init__.py  _multiblock_oracles.py  test_analysis.py  test_augment_design.py  test_bivariate.py  test_config.py  test_design_generation.py  test_design_properties.py  test_designs_optimal_pyoptex.py  test_designs_screening_optimal.py  test_doe.py  test_doe_knowledge.py  test_echarts_multi_panel.py  test_evaluate_design.py  test_experiments_datasets.py  test_experiments_models_formula.py  test_experiments_omars.py  test_experiments_security_sec14.py  test_experiments_simulations.py  test_experiments_tools.py  test_extras.py  test_linalg_guards.py  test_mcp_server.py  test_monitoring.py  test_multiblock_oracles.py  test_multiblock_reference.py  test_multivariate.py  test_multivariate_adaptive.py  test_multivariate_dataframedict.py  test_multivariate_feature_names.py  test_multivariate_introspection.py  test_multivariate_inversion.py  test_multivariate_nipals_seed.py  test_multivariate_opls.py  test_multivariate_resampler.py  test_multivariate_robustness.py  test_multivariate_sample_weight.py  test_multivariate_tpls_display.py  test_multivariate_tpls_feature_importance.py  test_multivariate_tsr.py  (+29 more)
tests/batch/: __init__.py  conftest.py  test_batch_monitor.py  test_batch_pca.py  test_batch_plots.py  test_batch_pls.py  test_data_input.py  test_datasets.py  test_dtw_align_with_path.py  test_features.py  test_plotting.py  test_preprocessing.py  test_tools.py  test_transformers.py
tests/fixtures/: batch-yield-and-purity.csv  kamyr.csv  rubber-colour.csv  test_doe1.csv
tests/fuzz/: __init__.py  test_mcp_boundary.py  (+1 more)
tools/: check_estimator_audit.py
(+222 files in other folders)
