[project]
name = "process-improve"
version = "1.43.0"
description = 'Designed Experiments; Latent Variables (PCA, PLS, multivariate methods with missing data); Process Monitoring; Batch data analysis.'
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["Designed Experiments", "Latent Variables", "PCA", "PLS", "Multivariate Data Analysis", "Batch data analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
authors = [
    { name = "Kevin Dunn", email = "kgdunn@gmail.com" },
]
dependencies = [
    # ENG-13 (#295): the runtime closure is intentionally trimmed to the
    # minimum every package in process_improve unconditionally needs.
    # Optional surfaces (plotting, experiments / DOE, batch image-IO,
    # MCP server, JIT speedups) live in extras; install
    # ``process-improve[all]`` to reproduce the pre-1.24.11 closure.
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]


[project.optional-dependencies]
# ENG-13 (#295): every public-API surface that pulls in heavy optional
# dependencies is gated by an extra. The matching ImportError raised by
# ``process_improve._extras.require`` tells the caller which extra to
# install.

# Plotting backends (Plotly + matplotlib + seaborn + ridgeplot).
plotting = [
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "ridgeplot>=0.5.0",
    "seaborn>=0.13.2",
]

# Designed-experiments helpers that need ``pyDOE3``.
expt = [
    "pyDOE3>=1.0",
]

# Batch process data analysis: image-IO + Excel readers used by the
# batch alignment / fixture loaders.
batch = [
    "openpyxl>=3.1.5",
    "scikit-image>=0.25.2",
]

# MCP server entry-point.
mcp = ["mcp>=1.0"]

# JIT-compiled inner loops in ``process_improve.batch.alignment_helpers``.
# Without numba the module still imports and runs; the ``@jit`` decorator
# falls back to a no-op so the function executes as plain Python.
fast = ["numba>=0.63.1"]

# Meta extra: reproduces the pre-ENG-13 install closure.
all = [
    "matplotlib>=3.10.8",
    "mcp>=1.0",
    "numba>=0.63.1",
    "openpyxl>=3.1.5",
    "plotly>=6.5.2",
    "pyDOE3>=1.0",
    "ridgeplot>=0.5.0",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
]

dev = [
    "coverage>=7.13.1",
    "hypothesis>=6.100",
    "matplotlib-stubs>=0.3.11",
    "mypy>=1.19.1,<2.2",
    "pandas-stubs>=2.3.3.260113",
    "plotly-stubs>=0.0.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pydata-sphinx-theme>=0.16.1",
    "ruff>=0.11.0",
    "sphinx>=8.1.3",
    "nbsphinx>=0.9.5",
    "ipykernel>=6.29",
    "tqdm-stubs>=0.2.1",
    "watchdog>=6.0.0",
]

[project.scripts]
process-improve-mcp = "process_improve.mcp_server:main"

[project.urls]
Homepage = "https://github.com/kgdunn/process_improve"
Repository = "https://github.com/kgdunn/process_improve"
Issues = "https://github.com/kgdunn/process_improve/issues"


[build-system]
requires = ["uv_build>=0.7.2,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "hypothesis>=6.100",
    "matplotlib-stubs>=0.3.11",
    "mypy>=1.19.1,<2.2",
    "pandas-stubs>=2.3.3.260113",
    "plotly-stubs>=0.0.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pydata-sphinx-theme>=0.16.1",
    "ruff>=0.11.0",
    "sphinx>=8.1.3",
    "nbsphinx>=0.9.5",
    "ipykernel>=6.29",
    "tqdm-stubs>=0.2.1",
    "watchdog>=6.0.0",
]


[tool.black]
line-length = 120
# skip-string-normalization = true
# Prevent Black from being too aggressive with parentheses
# magic-trailing-comma = false

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
# Disable import-untyped warnings
warn_unused_ignores = false
# Specifically disable import-untyped errors
disable_error_code = ["import-untyped"]
# Example scripts under examples/ are not production code and are already
# exempted from many strict ruff rules; they pull in notebook-flavoured
# patterns (untyped locals, dynamic axis manipulation) that are noise under
# type checking.
exclude = [
    "examples/",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
]

[tool.ruff.lint]

# Enable ALL Pyflakes codes by default.
select = ["ALL"]
ignore = [
    "C408",   # Unnecessary <dict/list/tuple> call - rewrite as a literal. Disagree with this.

    # Arguments
    "ARG001", # Unusued argument

    # Annotations not required
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN204", # Missing return type annotation for special method `__init__`

    # Docstrings
    "D100",   # Missing docstring in public module.
    "D101",   # don't require docstrings everywhere.
    "D107",
    "D202",
    "D203",
    "D205", # KGD: added this: the style of starting immediately is tough to read
    "D212",
    "D213",
    "D402",
    "D405", # Section name should be properly capitalized ("RETURN"): confused with Cypher queries
    "D407", # Missing dashed underline after section ("RETURN"): confused with Cypher queries
    "D413",
    "D415",
    "D416",
    "D417",

    "N803", # we don't mind mixed case variable names
    "N806", # we don't mind mixed case variable names

    "RET505", # Unnecessary `else` after `return` statement. Not convinced this is bad style.

    # Pandas:
    "PD011", # Don't agree that .values is bad style.

    # Commented out code
    "ERA001", # This is tough-one: commented out code does have its uses in debugging/testing

    # Boolean traps. I don't necessarily agree that these are traps in Python.
    "FBT001",
    "FBT002",
    "FBT003",

    # Controversial: but let's exclude assert testing. It is useful for unit testing,
    # and disabling ruff on all files that start with `**/*test_*.py` means many other useful
    # checks are disabled.
    "S101",   # Use of assert detected.

    # Testing
    "TID252", # we do need relative imports for the unit tests

    # Refactoring
    "PLR2004", # Don't agree that this is a bad style. It leads to overly verbose code in many cases.

    # Stop it with the trailing commas.
    "COM812", # Trailing comma is not always needed - doesn't lead to more readable code.

    # Ignore certain flake8-type-checking (TCH) codes.
    "TC001", # Don't agree that this is a bad style. It leads to overly verbose code.
    "TC002", # Don't agree that this is a bad style. It leads to overly verbose code.
    "TC003", # Don't agree that this is a bad style. It leads to overly verbose code.

    # Access private functions.
    "SLF001", # Sometimes we  need to access private functions

    # Don't require that Exceptions have string literals
    "EM101", # Ugly redundant code otherwise

    # Issues and TODO
    "TD002",  # Not necessary that every todo has a username,
    "TD003",  # Not necessary that every todo has an issuelink
    "TD004",  # Not necessary that every todo has a colon
    "TD005",  # Not necessary that every todo has a description
    "FIX002", # Not necessary that every fixme has to be removed

    # OK to use f-strings in errors as far as we are concerned here
    "TRY003",
    "EM102",
]

# Note: exclude list is in [tool.ruff] section above


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.pydocstyle]
# Docstrings follow the NumPy style; see CONTRIBUTING.md.
convention = "numpy"


[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",  # Type annotations not needed in tests
    "ANN201",  # Return type annotations not needed in tests
    "ANN202",  # Return type annotations not needed in tests
    "D102",    # Docstrings not needed in test methods
    "D103",    # Docstrings not needed in test functions
    "PLC0415", # Inline imports are common in tests for isolation
]
"tests/fixtures/**" = [
    "INP001",  # __init__.py not needed for standalone fixture scripts
    "T201",    # print() is expected when these scripts are run manually
]
"scripts/**" = [
    "ANN001",  # Type annotations not needed in helper scripts
    "ANN201",  # Return type annotations not needed in helper scripts
    "D103",    # Docstrings not needed in one-off analysis scripts
    "INP001",  # __init__.py not needed for standalone scripts
    "RET504",  # Pre-return assignment kept for readability
    "RUF046",  # Cast-already-int OK in helper scripts
    "S108",    # /tmp paths are fine for local dev caches in helper scripts
    "T201",    # print() is expected progress output in helper scripts
]
"tools/**" = [
    "ANN001",  # Type annotations not needed in audit / tooling scripts
    "ANN201",  # Return type annotations not needed in audit / tooling scripts
    "D103",    # Docstrings not needed in tooling scripts
    "INP001",  # __init__.py not needed for standalone tooling scripts
    "T201",    # print() is expected output in audit / tooling scripts
    "PLR0913", # Tooling scripts allowed many kwargs
]
"examples/**" = [
    "T201",    # print() is expected in example scripts and notebooks
    "ANN001",  # Type annotations not needed in examples
    "ANN201",  # Return type annotations not needed in examples
    "D103",    # Docstrings not needed in example scripts
    "E501",    # Line length less important in examples
    "INP001",  # __init__.py not needed in example directories
    "N802",    # Naming conventions relaxed in examples
    "N816",    # Naming conventions relaxed in examples
    "PLR0915", # Complexity checks relaxed in examples
    "PLR0913", # Too many arguments relaxed in examples
    "A004",    # Shadowing builtins OK in examples
    "B905",    # zip strict not needed in examples
    "B011",    # assert False OK in examples
    "PLW2901", # Loop var overwrite OK in examples
    "RUF046",  # Relaxed in examples
    "RUF005",  # Relaxed in examples
    "PT015",   # Relaxed in examples
    "D104",    # Missing __init__.py docstring OK in examples
]
"docs/conf.py" = [
    "INP001",  # Sphinx conf.py is intentionally not in a package
]
"docs/user_guide/case_studies/**" = [
    "T201",    # print() expected in case-study notebooks
    "ANN001",  # Type annotations not required in didactic code
    "ANN201",  # Return type annotations not required
    "ANN202",  # Return type annotations not required
    "D103",    # Function docstrings not required
    "D104",    # __init__.py docstrings not required
    "E501",    # Long lines OK in narrative cells
    "INP001",  # No __init__.py needed
    "N802",    # Relaxed naming
    "N816",    # Relaxed naming
    "PD901",   # `df` is fine
    "PLR0915", # Complexity relaxed
    "PLR0913", # Argument count relaxed
]
"docs/applied_doe/**" = [
    "T201",    # print() expected in tutorial notebooks
    "ANN001",  # Type annotations not required in didactic code
    "ANN201",  # Return type annotations not required
    "ANN202",  # Return type annotations not required
    "D103",    # Function docstrings not required
    "D104",    # __init__.py docstrings not required
    "E501",    # Long lines OK in narrative cells
    "INP001",  # No __init__.py needed
    "N802",    # Relaxed naming (factor symbols A, B, T, S, etc.)
    "N816",    # Relaxed naming
    "PD901",   # `df` is fine
    "PLR0915", # Complexity relaxed
    "PLR0913", # Argument count relaxed
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-third-party=["pytest", "pandas"]
